# SqlMendor

./: .env.example  .gitignore  BLOCKERS.md  DECISIONS.md  Makefile  PROGRESS.md  README.md  pyproject.toml
frontend/: index.html
outputs/: RESULTS.md  eval.json
scripts/: run_eval.py
src/sqlmender/: config.py  schemas.py
src/sqlmender/agent/: edges.py  graph.py  nodes.py  state.py
src/sqlmender/api/: auth.py  main.py  routes.py
src/sqlmender/db/: build_db.py  schema.sql  schema_info.py  seed.py
src/sqlmender/eval/: metrics.py
src/sqlmender/llm/: critic.py  generator.py  prompts.py
src/sqlmender/retrieval/: example_index.py  schema_index.py
src/sqlmender/sql/: executor.py  normalizer.py
src/sqlmender/train/: data_gen.py  infer.py  prepare_mlx.py  prompt.py  templates.py  train.py
tests/: conftest.py  test_agent.py  test_api.py  test_data_gen.py  test_executor_safety.py  test_generator.py  test_metrics.py  test_normalizer.py  test_prompts_prep.py  test_retrieval.py  test_schema_db.py
