[project]
name = "sqlmender"
version = "1.0.0"
description = "A self-correcting, fine-tuned natural-language-to-SQL agent: retrieves schema + few-shot context, generates SQL with an MLX-LoRA-fine-tuned Qwen, then self-heals via an execution-grounded generate-execute-critique-repair loop."
requires-python = ">=3.11"
dependencies = [
    "sqlglot>=25.0.0",
    "rank-bm25>=0.2.2",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "loguru>=0.7.2",
    # MLX is Apple-Silicon only; gated so installs succeed on Linux/CI.
    "mlx>=0.18.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.18.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-cov>=5.0.0", "httpx>=0.27.0", "ruff>=0.4.0", "black>=24.4.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
markers = ["integration: opt-in tests needing MLX / a trained adapter"]
addopts = "-m 'not integration'"
testpaths = ["tests"]
pythonpath = ["src"]
